<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <VideoView
        android:id="@+id/videoView_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_papers"
        android:layout_width="44dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/user_papers"
        app:layout_constraintStart_toEndOf="@+id/textView_coin"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_userlog"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/user_log"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.navigation.NavigationView

        android:id="@+id/navigationView"
        android:layout_width="51dp"
        android:layout_height="224dp"
        app:menu="@menu/navigation_drawer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" >

    </com.google.android.material.navigation.NavigationView>

    <Button
        android:id="@+id/button_gametype"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:text="@string/game_type1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button_gametype2"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="12dp"
        android:text="@string/game_type2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView_coin"
        android:layout_width="44dp"
        android:layout_height="23dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="44dp"
        android:text="@string/user_coin"
        app:layout_constraintStart_toEndOf="@+id/textView_username"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_username"
        android:layout_width="44dp"
        android:layout_height="23dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:text="@string/user_username"
        app:layout_constraintStart_toEndOf="@+id/imageView_userlog"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_experience"
        android:layout_width="107dp"
        android:layout_height="23dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/user_experience"
        app:layout_constraintStart_toEndOf="@+id/imageView_userlog"
        app:layout_constraintTop_toBottomOf="@+id/textView_username" />

    <Button
        android:id="@+id/button_setting"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="48dp"
        android:text="@string/game_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_notice"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginTop="105dp"
        android:layout_marginRight="40dp"
        android:text="@string/game_notice"
        app:layout_constraintBottom_toTopOf="@id/button_Shopping"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_Shopping"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginRight="40dp"
        android:text="@string/game_Shopping"
        app:layout_constraintBottom_toTopOf="@id/button_enjoy"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_notice"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_enjoy"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginRight="40dp"
        android:text="@string/game_enjoy"
        app:layout_constraintBottom_toTopOf="@id/button_official"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_Shopping"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_official"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="150dp"
        android:text="@string/game_official"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_enjoy"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_friend"
        android:layout_width="51dp"
        android:layout_height="38dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigationView" />

</androidx.constraintlayout.widget.ConstraintLayout>