<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:orientation="horizontal"
    android:padding="8dp">

  <ImageView
      android:layout_width="65dp"
      android:layout_height="match_parent"
      tools:srcCompat="@tools:sample/avatars[0]" />


  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <TextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/mashanzheng"
        android:text="@string/nickname"
        android:textAppearance="@style/TextAppearance.YiXian.Headline6" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/level"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/mashanzheng"
          android:text="@string/level"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/mashanzheng"
          android:text="@string/sex"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </LinearLayout>
  </LinearLayout>

  <Space
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1" />

  <Space
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1" />

  <Space
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1" />

  <Button
      android:id="@+id/button"
      android:layout_width="34dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"

      android:background="#FFFFFF"
      android:text="@string/conversation" />

  <Button
      android:id="@+id/button4"
      android:layout_width="29dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"

      android:text="@string/personal_information" />

  <Button
      android:id="@+id/button3"
      android:layout_width="51dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/delete" />


</LinearLayout>