<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotationX="0">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:background="@drawable/friendsystem_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleAngle="15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/return_main"
        android:layout_width="138dp"
        android:layout_height="50dp"
        android:text="@string/back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_layout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintHorizontal_weight="8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/group_divider"
        app:layout_constraintTop_toBottomOf="@id/return_main"
        app:endIconMode="custom"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:endIconDrawable="@drawable/search"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_textInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        app:layout_constraintLeft_toRightOf="@id/search_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintTop_toBottomOf="@id/return_main"
        app:layout_constraintBottom_toTopOf="@id/friends"
        android:id="@+id/group_divider"
        android:layout_width="0dp"
        android:orientation="horizontal"
        android:layout_height="50dp">

        <RadioButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:buttonTint="#E91E63"
            android:text="@string/level_sort" />

        <RadioButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:buttonTint="#F44336"
            android:text="@string/screen" />
    </RadioGroup>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friends"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="46dp"
        tools:listitem="@layout/friend_item" />

</androidx.constraintlayout.widget.ConstraintLayout>
